modifique el codigo del archivo html

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     Hola a todos, esto es una prueba. Solo estoy configurando mi VS Code en el 
-    curso de prework, estoy haciendo todo eso desde Ubuntu
+    curso de prework, estoy haciendo todo eso desde Ubuntu.
+    Actualizacion número 2, estoy haciendo cambios para reflejarlos en GitHub
 </body>
 </html>
